feat(mfa): let users return to the enrollment page from the verify page
Refs: AM-7609